--- a/my-react-weather-app/src/index.css
+++ b/my-react-weather-app/src/index.css
@@ -41,7 +41,7 @@ button[type="submit"]:hover {
     padding: 50px;
     border-radius: 10px;
     box-shadow: 2px 2px 5px hsl(0, 0%, 0%, 0.5);
-    min-width: 300px;
+    margin: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -96,4 +96,5 @@ p {
     font-size: 2.5rem;
     font-weight: bold;
     color: hsl(0, 0%, 0%, 0.75);
+    text-align: center;
 }
