get weather data function complete

--- a/my-react-weather-app/src/index.css
+++ b/my-react-weather-app/src/index.css
@@ -5,6 +5,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    min-height: 90vh;
 }
 
 .weather-form {
